@@ -1,4 +1,4 @@
-/*	$NetBSD: perform.c,v 1.6 2003/09/09 13:34:19 jlam Exp $	*/
+/*	$NetBSD: perform.c,v 1.7 2003/09/14 04:58:32 jlam Exp $	*/
 
 #if HAVE_CONFIG_H
 #include "config.h"
@@ -11,7 +11,7 @@
 #if 0
 static const char *rcsid = "from FreeBSD Id: perform.c,v 1.15 1997/10/13 15:03:52 jkh Exp";
 #else
-__RCSID("$NetBSD: perform.c,v 1.6 2003/09/09 13:34:19 jlam Exp $");
+__RCSID("$NetBSD: perform.c,v 1.7 2003/09/14 04:58:32 jlam Exp $");
 #endif
 #endif
 
@@ -321,7 +321,8 @@ require_delete(char *home, int tryall)
 		if (Fake)
 			rv = 0;
 		else
-			rv = vsystem("%s %s %s %s %s %s %s %s %s", ProgramPath,
+			rv = vsystem("%s -K %s %s %s %s %s %s %s %s %s", ProgramPath,
+			    _pkgdb_getPKGDB_DIR(),
 			    Prefix ? "-p" : "",
 			    Prefix ? Prefix : "",
 			    Verbose ? "-v" : "",
